--- a/SpringMvc/build.gradle
+++ b/SpringMvc/build.gradle
@@ -3,14 +3,43 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'war'
+apply plugin: 'com.bmuschko.tomcat'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.bmuschko:gradle-tomcat-plugin:2.2.2'
+    }
+}
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    mavenLocal()
+    jcenter()
 }
 
 dependencies {
+    //def springVersion ='3.0.3.RELEASE'
+    def springVersion = '5.0.4.RELEASE'
+    compile group: 'org.springframework', name: 'spring-webmvc', version:springVersion
+    compile group: 'org.springframework', name: 'spring-web', version:springVersion
+    compile group: 'org.springframework', name: 'spring-core', version:springVersion
+    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    def tomcatVersion = '7.0.85'
+    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
+}
+tomcatRun {
+    contextPath = ""
+    httpPort = 8080
+    File file = new File("src/main/webapp/WEB-INF/web.xml")
+    configFile = file
 }
